GNOME Bugzilla – Bug 776369
Device title missing on wired panel
Last modified: 2017-01-04 14:55:08 UTC
In GNOME 3.20, when visiting the Network panel, the first thing I see is the bold title "Wired", above the text "Connected - 1000 Mb/s". In GNOME 3.22, the word "Wired" is missing, and there is just a weird blank space about "Connected - 1000 Mb/s" where the title is supposed to go. Not sure when it broke, probably the port to libnm.
Created attachment 342363 [details] [review] network: Fix missing page title on wired panel The NetDeviceEthernet's title is not set until after the UI is created, so we have to listen for changes to the title.
Review of attachment 342363 [details] [review]: Looks fine to commit to master, gnome-3-22 and gnome-3-20, after the fix. ::: panels/network/net-device-ethernet.c @@ +627,3 @@ device->connections = g_hash_table_new (NULL, NULL); + + g_signal_connect (device, "notify::title", G_CALLBACK (device_ethernet_refresh_ui), NULL); Could you please use an intermediary callback with the correct signature for this?
(In reply to Bastien Nocera from comment #2) > Review of attachment 342363 [details] [review] [review]: > > Looks fine to commit to master, gnome-3-22 and gnome-3-20, after the fix. It's not needed in gnome-3-20. > ::: panels/network/net-device-ethernet.c > @@ +627,3 @@ > device->connections = g_hash_table_new (NULL, NULL); > + > + g_signal_connect (device, "notify::title", G_CALLBACK > (device_ethernet_refresh_ui), NULL); > > Could you please use an intermediary callback with the correct signature for > this? Um, good point, wasn't thinking when I wrote it I guess.
Attachment 342363 [details] pushed as 03ebd43 - network: Fix missing page title on wired panel