network: Fix missing page title on wired panel

The NetDeviceEthernet's title is not set until after the UI is created,
so we have to listen for changes to the title.

https://bugzilla.gnome.org/show_bug.cgi?id=776369